[package]
name = "stem-cell"
version = "0.0.1"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2018"
description = "A simple project to demonstrate the cross-platform release management process for my open source work."
license = "MIT"
documentation = "https://github.com/stepchowfun/stem-cell"
homepage = "https://github.com/stepchowfun/stem-cell"
repository = "https://github.com/stepchowfun/stem-cell"
readme = "README.md"

[dependencies]
clap = "2"
