[package]
name = "stem-cell"
version = "0.0.7"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2021"
description = "A simple project to demonstrate the cross-platform release management process I use for my open source work."
license = "MIT"
documentation = "https://github.com/stepchowfun/stem-cell"
homepage = "https://github.com/stepchowfun/stem-cell"
repository = "https://github.com/stepchowfun/stem-cell"
readme = "README.md"

[lints]
clippy.all = "deny"
clippy.default_numeric_fallback = "deny"
clippy.pedantic = "deny"
rust.warnings = "deny"

[dependencies]
clap = "2"
